# BEW-Doku-Projekt

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: BACKLOG.md  PRODUCT.md  architecture-decisions.md  architektur-ebenen.md  audit-2026-05-06.md  disco-md-migration-playbook.md  dwg-setup.md  network-egress-policy.md  operations-runbook.md  report-builder-template.md  sdk-reference.md  testing-strategy.md  vision.md
docs/archive/: README.md  memory-reform-2026-05-09.md  review-session-2026-05-08.md
docs/concepts/: data-lineage.md  extraction-pipeline-overhaul.md  kritis-compliance.md  object-graph.md  pipeline-reform-v2.md
migrations/: 001_initial.sql  002_projects_sources_sharepoint.sql  003_sp_metadata_snapshot.sql  004_chat_threads_and_messages.sql  005_projects_slug.sql  006_project_chat.sql  007_agent_tool_calls.sql  008_chat_state_measured_tokens.sql  009_chat_message_attachments.sql  010_agent_egress_violations.sql
migrations/project/: 001_agent_sources.sql  002_agent_source_relations.sql  003_agent_script_runs.sql  006_search_index.sql  007_pdf_pipeline_tables.sql  009_context_kind.sql
migrations/project/datastore/: 001_agent_sources.sql  004_pdf_pipeline_tables.sql  005_pdf_markdown.sql  006_context_kind.sql  007_pdf_page_offsets.sql  008_extraction_pipeline.sql  009_doc_markdown_rel_path_prefix.sql  010_doc_markdown_status.sql  011_canonical_path.sql  012_doc_markdown_canonical_path.sql  README.md
migrations/project/workspace/: 002_agent_flows.sql  003_flow_notifications.sql  004_pdf_routing.sql  005_extraction_routing.sql  006_excel_context_remigrate.sql  007_routing_status.sql  008_agent_table_docs.sql  009_drop_norm_tables.sql  README.md
scripts/: backfill_canonical_path.py  backfill_pdf_page_offsets.py  backup_disco.sh  download_models.py  fix_fk_pipeline_v2.py  fix_workspace_backfill_pipeline_v2.py  foundry_setup.py  generate_test_fixtures.py  install-libredwg.sh  migrate_pipeline_v2.py  migrate_to_pipeline_v2.sh  migrate_workspace_pin.py  mirror_prod_project.sh  run-datasette.sh  setup_e2e_project.sh  sp_browser_export.js  sp_xml_to_json.py  unicode_migration_dryrun.py
skills/: context-onboarding.md  excel-formatter.md  excel-reporter.md  flow-builder.md  flow-supervisor.md  markdown-extractor.md  pipeline-diagnostics.md  planning.md  project-onboarding.md  python-executor.md  report-builder.md  sdk-reference.md  sources-onboarding.md
src/bew/: __init__.py  cli.py  config.py  db.py  flow_notifications.py  projects.py  workspace.py
src/bew/agent/: __init__.py  context.py  core.py  locks.py  system_prompt.md
src/bew/agent/functions/: __init__.py  data.py  domain.py  flows.py  fs.py  imports.py  markdown.py  markdown_tools.py  memory.py  pdf.py  sources.py
src/bew/api/: __init__.py  agent.py  main.py  ws_registry.py
src/bew/api/static/: index.html
src/bew/chat/: __init__.py  repo.py
src/bew/flows/: README.md  runner_host.py  sdk.py  service.py
src/bew/sharepoint/: __init__.py  import_json.py  sync.py
src/bew/ui/: app.py
src/bew/ui/pages/: projects.py  sources.py
src/disco/: __init__.py  __main__.py  cli.py  config.py  flow_notifications.py  pricing.py  projects.py  sources.py  workspace.py
src/disco/agent/: __init__.py  _network_guard.py  _run_with_guard.py  context.py  core.py  locks.py  system_prompt.md
src/disco/agent/functions/: __init__.py  data.py  doc_markdown.py  docint.py  domain.py  executor.py  flows.py  fs.py  imports.py  memory.py  notes.py  pdf.py  pdf_markdown.py  pipeline.py  plans.py  search.py  skills.py  sources.py  table_docs.py  workspace_validity.py
src/disco/api/: __init__.py  main.py  ws_registry.py
src/disco/api/static/: index.html
src/disco/chat/: compaction.py  repo.py
src/disco/docs/: __init__.py  _dwg_libredwg.py  dwg.py  excel.py  image.py  pdf.py  render.py  routing.py
src/disco/flows/: README.md  __init__.py  runner_host.py  sdk.py  service.py
src/disco/fs/: path_resolver.py
src/disco/pdf/: __init__.py  markdown.py
src/disco/sharepoint/: auth.py  graph.py  sync.py
src/disco/ui/: __init__.py  state.py
tests/: test_path_resolver.py
tests/e2e/: README.md
tests/e2e/scenarios/: 01-source-onboarding.md  02-pipeline-fulltest.md  03-memory-reform.md
tests/uat/: README.md
tests/uat/doku-klassifikation/: acceptance.md  fixture-spec.md  scenario.md
(+3 files in other folders)
