[project]
name = "bew"
version = "0.1.0"
description = "Agentisches Dokumenten-Management-System mit Azure KI-Services und SQLite-Datenhaltung"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "datasette>=1.0a16",
    # SharePoint-Connector (Phase 1)
    "msal>=1.28",
    "httpx>=0.27",
    # Web-UI + API (Phase 2)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    # UI Fallback
    "streamlit>=1.35",
    # Azure-Clients (Phase 2)
    "azure-ai-documentintelligence>=1.0",
    "openai>=1.50",
    # Agent-Framework (Phase 2a) — Microsoft Foundry Agent Service
    # Code Interpreter + File Search + Custom Functions managed by Azure
    "azure-ai-projects>=2.0",
    "azure-identity>=1.19",
    # PDF-Textextraktion lokal (Worker-Prozess für Bulk-Jobs, Phase 2c)
    "pypdf>=5.0",
    # Excel lesen/schreiben mit Formatierung (Phase 2b)
    "openpyxl>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bew"]

[project.scripts]
# Hauptmarke: 'disco' — der neue CLI-Einstieg (alle Befehle hier)
disco = "bew.cli:main"
disco-server = "uvicorn:main"
# Aliase fuer Uebergangsphase (alte Skripte/Doku brechen sonst)
bew = "bew.cli:main"
bew-server = "uvicorn:main"
