[project]
name = "disco"
version = "0.1.0"
description = "Disco — agentisches Desktop-System fuer technische Dokumentation"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "datasette>=1.0a16",
    # SharePoint-Connector (Phase 1)
    "msal>=1.28",
    "httpx>=0.27",
    # Web-UI + API (Phase 2)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    # UI Fallback
    "streamlit>=1.35",
    # Azure-Clients (Phase 2)
    "azure-ai-documentintelligence>=1.0",
    "openai>=1.50",
    # Agent-Framework (Phase 2a) — Microsoft Foundry Agent Service
    # Code Interpreter + File Search + Custom Functions managed by Azure
    "azure-ai-projects>=2.0",
    "azure-identity>=1.19",
    # PDF-Textextraktion lokal (Worker-Prozess für Bulk-Jobs, Phase 2c)
    "pypdf>=5.0",
    # Excel lesen/schreiben mit Formatierung (Phase 2b)
    "openpyxl>=3.1",
    # Lokale PDF -> Markdown via Docling. Das [vlm]-Extra bringt mlx-vlm
    # auf macOS-arm64 (M1/M2/M3) und transformers fuer alle anderen
    # Plattformen — wir brauchen es fuer Granite-Docling-258M.
    "docling[vlm]>=2.90.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/disco"]

[project.scripts]
disco = "disco.cli:main"
disco-server = "uvicorn:main"
